# iree-llvm-fork

./: README.md
mlir/include/mlir/: InitAllDialects.h  InitAllPasses.h
mlir/include/mlir/Conversion/: Passes.td
mlir/include/mlir/Dialect/NVGPU/: CMakeLists.txt  Passes.h  Passes.td
mlir/include/mlir/Dialect/NVGPU/Transforms/: Transforms.h
mlir/include/mlir/IR/: OpBase.td  OperationSupport.h
mlir/include/mlir/Interfaces/: TilingInterface.td
mlir/lib/Analysis/Presburger/: IntegerPolyhedron.cpp
mlir/lib/Conversion/ArithmeticToSPIRV/: ArithmeticToSPIRV.cpp
mlir/lib/Conversion/GPUToSPIRV/: GPUToSPIRVPass.cpp
mlir/lib/Conversion/MathToSPIRV/: MathToSPIRV.cpp
mlir/lib/Conversion/MemRefToSPIRV/: MapMemRefStorageClassPass.cpp
mlir/lib/Conversion/NVGPUToNVVM/: NVGPUToNVVM.cpp
mlir/lib/Conversion/VectorToGPU/: VectorToGPU.cpp
mlir/lib/Conversion/VectorToLLVM/: ConvertVectorToLLVM.cpp
mlir/lib/Dialect/SCF/: SCF.cpp
mlir/lib/Dialect/Utils/: StaticValueUtils.cpp
mlir/lib/IR/: OperationSupport.cpp  PatternMatch.cpp
mlir/lib/Transforms/Utils/: GreedyPatternRewriteDriver.cpp
mlir/test/Conversion/ArithmeticToSPIRV/: arithmetic-to-spirv.mlir
mlir/test/Conversion/MathToSPIRV/: math-to-glsl-spirv.mlir
mlir/test/Conversion/NVGPUToNVVM/: nvgpu-to-nvvm.mlir
mlir/test/Dialect/GPU/: invalid.mlir  ops.mlir
mlir/test/Dialect/LLVMIR/: nvvm.mlir
mlir/test/Dialect/Linalg/: canonicalize.mlir  pad_fusion.mlir  transform-op-pad.mlir
mlir/test/Transforms/: test-strict-pattern-driver.mlir
mlir/tools/mlir-opt/: mlir-opt.cpp
mlir/utils/spirv/: refresh_inst.sh
(+78 files in other folders)
